# En-Uygun-U-ak-Bileti

./: .env.example  .gitignore  README.md  app.py  demo.py  index.html  package-lock.json  package.json  requirements.txt  vitest.config.js
src/: COMPLETION_REPORT.md  README.md  main.js  main.py  pyproject.toml  requirements.txt
src/components/: filters.js  flightCard.js  flightList.js  modal.js  searchForm.js  utils.js
src/forms/: search_form.py
src/frontend/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.js
src/frontend/frontend/src/: App.jsx  App.tsx  index.css
src/frontend/frontend/src/api/: flightService.ts  mockServer.ts
src/frontend/frontend/src/components/FlightCard/: FlightCard.test.jsx  FlightCard.tsx
src/frontend/frontend/src/components/FlightDetailModal/: FlightDetailModal.test.jsx  FlightDetailModal.tsx
src/frontend/frontend/src/hooks/: useFlights.ts
src/frontend/frontend/src/tests/: setup.js
src/frontend/frontend/src/types/: flight.d.ts
src/frontend/frontend/src/utils/: formatters.ts
src/services/: flight_service.py
src/static/css/: tailwind.css
src/static/js/: ui.js
src/styles/: custom.css
src/templates/: base.html  error.html  flight_card.html  flight_detail_modal.html  flights_list.html  index.html
src/tests/: apiMock.test.js  conftest.py  flightList.test.js  modal.test.js  searchForm.test.js  setup.js  test_api_mock.py  test_error_handling.py  test_flight_card.py  test_flight_list_render.py  test_modal_behavior.py  test_search_form.py
src/utils/: formatters.py
(+39 files in other folders)
